# NetSentinel-CLI

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  tasks.txt
include/: AuditEngine.hpp  CLIHandler.hpp  DatabaseManager.hpp  DiscoveryEngine.hpp  MetricsEngine.hpp  NetworkUtils.hpp
scripts/: setup_db.sh  test_ports.py
sql/: init.sql
src/: AuditEngine.cpp  CLIHandler.cpp  DatabaseManager.cpp  DiscoveryEngine.cpp  MetricsEngine.cpp  main.cpp
